# raylib-project-windows

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-windows.yml
include/: player.h  utils.h
src/: main.c  player.c  utils.c
